--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -151,7 +151,7 @@
     align-items: start;
     justify-content: center;
     margin: 40px 0;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     
 }
 
@@ -217,7 +217,8 @@
 .myImages {
     display: flex;
     align-items: center;
-    gap: 0.2rem;    
+    gap: 0.2rem;   
+    flex-wrap: wrap-reverse; 
 }
 
 .myImages-images figure img{
