--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -123,6 +123,7 @@
     display: flex;
     align-items: center;
     margin-top: 100px;
+    padding: 0.5rem;
     
 }
 
@@ -152,6 +153,7 @@
     justify-content: center;
     margin: 40px 0;
     flex-wrap: wrap;
+    padding: 0.5rem;
     
 }
 
